<resources>
    <string name="app_name">MoneyBag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeMenuString">Home</string>
    <string name="HomeString">Главная</string>
    <string name="AddOperationString">Добавить операцию</string>
    <string name="SettingsString">Сменить/установить PIN-код</string>
    <string name="GraphicsString">Графики</string>
    <string name="CategoryString">Категории</string>
    <string name="Language">Язык</string>
    <string name="Theme">Тема</string>
    <string name="SetCode">PIN-код</string>
    <string name="InputPasswordString">Введите PIN-код</string>
    <string name="RepeatPasswordString">Повторите PIN-код</string>
    <string name="MoneyLeftString">Остаток: </string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="PasswordSettedString">PIN-код успешно установлен</string>
    <string name="WrongPassword">Неверный PIN-код</string>
    <string name="Consumption">Расход</string>
    <string name="Income">Доход</string>
    <string name="Consumptions">Расходы</string>
    <string name="Incomes">Доходы</string>
    <string name="Add">Добавить</string>
    <string name="InputSum">Сумма</string>
    <string name="OperationsSavedToFileAlert">Успешно сохранено в папку Документы</string>
    <string name="AcceptDialogButton">Ок</string>
    <string name="AddBillString">Добавить счёт</string>
    <string name="BillNamePlaceHolder">Название счёта</string>
    <string name="ChooseCurrencyString">Выберите валюту:</string>
    <string name="AllBillString">Все счета</string>
    <string name="InputAmount">Начальная сумма</string>
    <string name="LastWeek">Неделя</string>
    <string name="LastMonth">Месяц</string>
    <string name="HalfYear">Полгода</string>
    <string name="Year">Год</string>
    <string name="NotEnoughMoney">На счету недостаточно средств</string>
    <string name="CategoryError">Выберите категорию операции</string>
    <string name="TypeEror">Выберите тип операции</string>
    <string name="ValueError">Ввведите сумма операции</string>
    <string name="DateError">Выберите дату</string>
</resources>