<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SetPasswordFragment">
    <data>
        <variable
            name="ClickHandler"
            type="com.example.project.fragments.SetPasswordFragment.PasswordClickHandlers" />
    </data>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/InputPasswordString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/indicatorPassword"
            android:layout_width="200dp"
            android:layout_margin="50dp"
            app:trackThickness="15dp"
            app:indicatorColor="@color/black"
            app:trackColor="@color/white"
            app:trackCornerRadius="30dp"
            android:layout_height="60dp"/>
   <GridLayout
       android:layout_width="wrap_content"
       android:layout_height="400dp"
       android:horizontalSpacing="5dp"
       android:columnCount="3"
       >
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/One"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Two"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Three"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Four"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Five"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Six"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Seven"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Eight"
           style="@style/InputPasswordButton"/>
       <Button
           android:onClick="@{ClickHandler::onNumberClick}"
           android:text="@string/Nine"
           style="@style/InputPasswordButton"/>

   </GridLayout>
    </LinearLayout>
</layout>