<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GraphicsFragment">
    <data>
        <variable
            name="viewmodel"
            type="com.example.project.viewmodels.GraphicsViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.jjoe64.graphview.GraphView
            android:id="@+id/Graphic"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_gravity="center"
            android:minWidth="150dp"
            android:minHeight="50dp"
            android:gravity="center_vertical"
            style="@style/SpinnerStyle"
            android:spinnerMode="dropdown"
            android:onItemSelected="@{viewmodel::onBillSelectionChanged}"
            android:adapter="@{viewmodel.billsAdapter}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/TypeButtonGroup"
            android:layout_gravity="center"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:checkedButton="@id/incomesgraphic"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/incomesButton"
                android:onClick="@{viewmodel::onConsumptionClick}"
                android:text="@string/Consumptions"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/incomesgraphic"
                android:onClick="@{viewmodel::onIncomesClick}"
                android:text="@string/Incomes"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            app:singleSelection="true"
            app:checkedButton="@id/Week"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/HalfYear"
                android:text="@string/HalfYear"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{viewmodel::onSixMonthsClick}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:onClick="@{viewmodel::onLastMonthClick}"
                android:id="@+id/Month"
                android:text="@string/LastMonth"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/Week"
                android:text="@string/LastWeek"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{viewmodel::onLastWeekClick}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <androidx.cardview.widget.CardView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="25dp"
            android:elevation="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:text="@{viewmodel.bindableProperties.outputText}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>