<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddBill">
    <data>
        <variable
            name="viewmodel"
            type="com.example.project.viewmodels.AddBillViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/addBillParent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <EditText
            android:text="@={viewmodel.bill.bill_name}"
            android:hint="@string/BillNamePlaceHolder"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/ChooseCurrencyString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatSpinner
                style="@style/SpinnerStyle"
                android:onItemSelected="@{viewmodel::onCurrencySelectionChanged}"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:adapter="@{viewmodel.currencySpinnerAdapter}" />
        </LinearLayout>
        <EditText
            android:text="@={viewmodel.bindableProperties.startingSum}"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:hint="@string/InputAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_gravity="center"
            android:text="@{viewmodel.bindableProperties.errorText}"
            android:visibility="@{viewmodel.bindableProperties.visibility}"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:textSize="15sp"
            android:onClick="@{viewmodel::onAddBillClick}"
            android:text="@string/AddBillString"
            android:layout_gravity="center"
            style="@style/InputPasswordButton"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="20sp"
            android:text="@string/AllBillString"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_margin="5dp"
            android:elevation="50dp"
            app:cardCornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:adapter="@{viewmodel.billRecyclerViewAdapter}"
            android:layout_margin="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>