<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.Settings">
    <data>
        <variable
            name="ClickHandler"
            type="com.example.project.fragments.Settings.SettingsClickHandlers" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:onClick="@{ClickHandler::onLanguageClick}"
            android:text="@string/Language"
            style="@style/TextViewSettings" />
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:id="@+id/LanguageButtonGroup"
            android:layout_gravity="center"
            android:alpha="0"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/Language"
            style="@style/TextViewSettings"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/Theme"
            style="@style/TextViewSettings"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="@{ClickHandler::onPasswordClick}"
            android:text="@string/SetCode"
            style="@style/TextViewSettings"
            />
    </LinearLayout>

</layout>