<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ExspensesFragment">
    <data>
        <variable
            name="viewmodel"
            type="com.example.project.viewmodels.ExspensesViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:minWidth="150dp"
            android:minHeight="50dp"
            android:gravity="center_vertical"
            style="@style/SpinnerStyle"
            android:spinnerMode="dropdown"
            android:onItemSelected="@{viewmodel::onBillSelectionChanged}"
            android:adapter="@{viewmodel.billsAdapter}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="@string/MoneyLeftString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="20sp"
                android:text="@{Double.toString(viewmodel.bill.bill_amount)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="20sp"
                android:text="@={viewmodel.bill.currency_name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginBottom="-70dp"
            android:elevation="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:id="@+id/TypeButtonGroup"
                android:layout_gravity="center"
                app:singleSelection="true"
                app:checkedButton="@+id/incomesButtonExspenses"
                android:layout_height="wrap_content">
                <Button
                    android:onClick="@{viewmodel::onConsumptionsButtonClick}"
                    android:gravity="center_horizontal"
                    android:text="@string/Consumptions"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="120dp"
                    android:layout_height="80dp"/>
                <Button
                    android:id="@+id/incomesButtonExspenses"
                    android:onClick="@{viewmodel::onIncomesButtonClick}"
                    android:gravity="center_horizontal"
                    android:text="@string/Incomes"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="120dp"
                    android:layout_height="80dp"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="50dp"
            app:cardElevation="25dp"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.PieChart
                android:layout_width="300dp"
                android:id="@+id/piechartExs"
                android:layout_height="250dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            tools:text="asdada"
            tools:listitem="@layout/operation_recyclerview_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:adapter="@{viewmodel.operationsAdapter}"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end|bottom"
            android:onClick="@{viewmodel::onSaveButtonClick}"
            android:src="@drawable/ic_baseline_save_24"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>